# autotimeliner

./: .gitignore  LICENSE  README.md  autotimeline.py  pyproject.toml
docs/: index.md  migration.md  usage.md
src/autotimeliner/: __init__.py  cli.py  exporter.py  timeliner.py  vol3_runner.py
tests/: __init__.py  test_cli.py  test_exporter.py
